Fixed user page layout errors on small screens Fixed styling inconsistencies with the login button

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -281,6 +281,7 @@ table {
   max-width: 100%;
   max-height: 240px;
   margin-right: 10px;
+  margin-top: 10px;
   margin-bottom: 5px;
 }
 .description a {
@@ -289,6 +290,22 @@ table {
 @media(min-width: 450px) {
   .artist-bio .post .title {
     margin-left: 240px;
+  }
+}
+@media(max-width:600px) {
+  .artist-bio {
+    text-align: center;
+  }
+  .artist-bio h1, .artist-bio .actions, .artist-bio .details {
+    text-align: left;
+  }
+  .avatar.large {
+    float: none;
+    margin: 10px 0 0 0;
+  }
+  .artist-bio .post .title {
+    display: block;
+    margin-left: 0;
   }
 }
 
@@ -438,7 +455,7 @@ a.source {
   position: absolute;
   top: 0px;
   right: 0px;
-  padding: 30px 40px 30px 40px;
+  padding: 10px 20px 10px 20px;
 }
 
 .post .actions .liked, .post .actions .starred {
@@ -1248,9 +1265,6 @@ label input[type=checkbox]:checked + i + i {
   margin-right: 10px;
   border-radius: 0 0 10px 10px;
 }
-#search:hover {
-  background: #fff;
-}
 #search > form > * {
   display: inline-block;
   padding: 5px 15px;
@@ -1284,7 +1298,7 @@ label input[type=checkbox]:checked + i + i {
   border-right: none;
 }
 
-#login.drop-down-holder:hover,
+#search:hover, #login:hover,
 #login.drop-down-holder.hover {
   background: #fff;
 }
